Provide link to list of gnu.org mirrors. Do not expose main egcs ftp site, instead recommend go.cygnus.com or one of the mirrors. Fix a typo or two.

--- a/htdocs/gcc-2.95/gcc-2.95.html
+++ b/htdocs/gcc-2.95/gcc-2.95.html
@@ -26,7 +26,7 @@ a complete list of new features found in gcc-2.95 releases.
 and plaintext forms in the <code>install</code> directory in the distribution.
 However, the most up to date
  <a href="../install/index.html">installation instructions</a>
-and <a href="buildstat.html">build/test status</a> on the web pages.  We
+and <a href="buildstat.html">build/test status</a> are on the web pages.  We
 will update those pages as new information becomes available.
 
 
@@ -38,18 +38,15 @@ gcc successful.
 <p>And finally, we can't in good conscience fail to mention some
 <a href="caveats.html">caveats</a> to using gcc-2.95.
 
-<p>XXX FSF mirror sites
-<p><a href="ftp://egcs.cygnus.com/pub/egcs/releases/index.html">
-FTP Download gcc-2.95
-from egcs.cygnus.com (USA California)</a>
+<p><a href="http://www.gnu.org/order/ftp.html">
+FTP Download gcc-2.95 from one of the gnu.org mirror sites</a>
 <p><a href="ftp://go.cygnus.com/pub/sourceware.cygnus.com/pub/egcs/releases/index.html">
-FTP Download gcc-2.95 from go.cygnus.com (USA California -- High speed link
-provided by Stanford)</a>
+FTP Download gcc-2.95 from go.cygnus.com (USA California)</a>
 <p>The gcc-2.95 release is available on many FTP mirror sites.<br>
 <a href="../mirrors.html"> Goto mirror list to find a closer site</a>
 
 <hr>
-<i>Last modified on July 13, 1999.</i>
+<i>Last modified on July 25, 1999.</i>
 
 </body>
 </html>
