Various updates based on Marc's suggestions.

--- a/htdocs/gcc-2.95/gcc-2.95.html
+++ b/htdocs/gcc-2.95/gcc-2.95.html
@@ -10,19 +10,21 @@
 
 <p>The GCC project is pleased to announce the release of gcc-2.95.
 
-<p>gcc-2.95 is the first release of the GNU Compiler Collection since the
+<p>This is the first release of the GNU Compiler Collection (GCC) since the
 April 1999 GCC/EGCS reunification and includes nearly a year's worth of
 new development and bugfixes.
 
-<p>gcc-2.95 has been extensively <a href="regress.html">regression tested</a>
+<p>This release has been extensively
+<a href="regress.html">regression tested</a>
 and <a href="othertest.html">package tested</a>.  It should be reliable
 and suitable for widespread use.
 
-<p>gcc-2.95 has several new optimizations, new targets, new languages, and
-other new features.  See the <a href="features.html">new features</a> page for
-a complete list of new features found in gcc-2.95 releases.
+<p>Several new optimizations, new targets, new languages and various
+other features have been added to GCC for this release.  Please refer
+to the <a href="features.html">new features</a> page for a complete
+list of new features found in the gcc-2.95 releases.
 
-<p>The gcc-2.95 source release includes installation instructions in both HTML
+<p>The sources include installation instructions in both HTML
 and plaintext forms in the <code>install</code> directory in the distribution.
 However, the most up to date
  <a href="../install/index.html">installation instructions</a>
@@ -42,11 +44,14 @@ gcc successful.
 FTP Download gcc-2.95 from one of the gnu.org mirror sites</a>
 <p><a href="ftp://go.cygnus.com/pub/sourceware.cygnus.com/pub/egcs/releases/index.html">
 FTP Download gcc-2.95 from go.cygnus.com (USA California)</a>
-<p>The gcc-2.95 release is available on many FTP mirror sites.<br>
 <a href="../mirrors.html"> Goto mirror list to find a closer site</a>
 
+<p>For additional information about the GCC project please see the
+<a href="../index.html">GCC web page</a> or contact the
+<a href="mailto:gcc@gcc.gnu.org">GCC development mailing list</a>.
+
 <hr>
-<i>Last modified on July 25, 1999.</i>
+<i>Last modified on July 26, 1999.</i>
 
 </body>
 </html>
