Tweaks from Marc.

--- a/htdocs/gcc-2.95/gcc-2.95.html
+++ b/htdocs/gcc-2.95/gcc-2.95.html
@@ -14,14 +14,14 @@
 April 1999 GCC/EGCS reunification and includes nearly a year's worth of
 new development and bugfixes.
 
-<p>This release has been extensively
+<p>The whole suite has been extensively 
 <a href="regress.html">regression tested</a>
 and <a href="othertest.html">package tested</a>.  It should be reliable
 and suitable for widespread use.
 
-<p>Several new optimizations, new targets, new languages and various
-other features have been added to GCC for this release.  Please refer
-to the <a href="features.html">new features</a> page for a complete
+<p>The compiler has several new optimizations, new targets, new languages
+and other new features.  See the
+<a href="features.html">new features</a> page for a more complete
 list of new features found in the gcc-2.95 releases.
 
 <p>The sources include installation instructions in both HTML
@@ -32,10 +32,10 @@ and <a href="buildstat.html">build/test status</a> are on the web pages.  We
 will update those pages as new information becomes available.
 
 
-<p> The gcc project would like to thank the numerous people that have
+<p> The GCC project would like to thank the numerous people that have
 contributed new features, test results, bugfixes, etc.  This 
 <a href="../thanks.html">amazing group of volunteers</a> is what makes
-gcc successful.
+GCC successful.
 
 <p>And finally, we can't in good conscience fail to mention some
 <a href="caveats.html">caveats</a> to using gcc-2.95.
@@ -47,11 +47,11 @@ FTP Download gcc-2.95 from go.cygnus.com (USA California)</a>
 <a href="../mirrors.html"> Goto mirror list to find a closer site</a>
 
 <p>For additional information about the GCC project please see the
-<a href="../index.html">GCC web page</a> or contact the
+<a href="../index.html">GCC project web server</a> or contact the
 <a href="mailto:gcc@gcc.gnu.org">GCC development mailing list</a>.
 
 <hr>
-<i>Last modified on July 26, 1999.</i>
+<i>Last modified on July 27, 1999.</i>
 
 </body>
 </html>
