Fix a bad link. Remove to <HR>s.

--- a/htdocs/faq.html
+++ b/htdocs/faq.html
@@ -295,7 +295,6 @@ disadvantages.</p>
 <a name="installation"></a>
 <h1>Installation</h1>
 
-<hr>
 <h2><a name="fortran">Problems building the Fortran compiler</a></h2>
 
 <p>The Fortran front end can not be built with most vendor compilers; it must
@@ -502,9 +501,8 @@ no additional flags.</p>
 <a name="platform"></a>
 <h1>Platform-specific issues</h1>
 
-<p>Please read the <a href="/xinu/gcc-faq/wwwdocs/htdocs/install/specific.html">host/target specific installation</a> notes, too.</p>
+<p>Please read the <a href="install/specific.html">host/target specific installation</a> notes, too.</p>
 
-<hr>
 <h2><a name="x86eh">Problems with exception handling on x86 platforms</a></h2>
 
 <p>If you are using the GNU assembler (aka gas) on an x86 platform and
