--- a/htdocs/web.html
+++ b/htdocs/web.html
@@ -16,8 +16,6 @@ of being implemented soon. ;-)</p>
 <ul>
 <li>Complete MetaHTML machinery on the egcs machine and convert all
     pages to some common style. [Gerald]
-<li>Move system specific installation notes from faq.html to
-    install/specific.html. [Bret McGuire]
 <li>Move extra pages corresponding to technical news items into a
     directory of their own. Add an index for these.
 <li>Move bug reporting information from faq.html to bugs.html (making the
@@ -28,12 +26,14 @@ of being implemented soon. ;-)</p>
     This might be combined with the previous item. [Marc Lehmann]
 <li>Investigate faq-o-matic to supplement (or possibly replace) the FAQ we
     are currently maintaining.
+<li>Restore contents of install/specific.html once the testsuite has been
+    added again.
 </ul>
 
 <address>
 <a href="about.html">The GCC team</a>
 <br>
-<small><i>Last modified on July 16, 1999.</i></small>
+<small><i>Last modified on July 28, 1999.</i></small>
 </address>
 
 </body>
