Markup fix. By Joe Buck <jbuck@synopsys.COM>

--- a/htdocs/bugs.html
+++ b/htdocs/bugs.html
@@ -155,7 +155,7 @@ others.
 <p>Many of the standard library features are not implemented in GCC
 2.95. Others, such as iostreams, are supported, but not in a
 compliant way (e.g. <CODE>ostream</CODE> is not
-<CODE>basic_ostream&#lt;char&#gt;</CODE>, and not
+<CODE>basic_ostream&lt;char&gt;</CODE>, and not
 declared in <CODE>std::</CODE>).
 
 <p>SGI's implementation of the STL is included, but it is in the
