Various changes requested by RMS.

--- a/htdocs/gcc-2.95/branch.html
+++ b/htdocs/gcc-2.95/branch.html
@@ -1,44 +1,44 @@
 <html>
 <head>
-<title>gcc-2.95 branch </title>
+<title>GCC 2.95 branch </title>
 </head>
 <body>
-<h1 align="center">gcc-2.95 branch</h1>
+<h1 align="center">GCC 2.95 branch</h1>
 
-<p>We have made a branch in the source tree for gcc-2.95.  Depending on your
+<p>We have made a branch in the source tree for GCC 2.95.  Depending on your
 situation you have three choices for handling your CVS tree.
 <ol>
   <li> Do nothing.  Your existing CVS tree will continue to track the mainline
        gcc sources.
-  <li> Track just the gcc-2.95 release.  You can convert your existing CVS tree
-       to track the gcc-2.95 release with the command:
+  <li> Track just the GCC 2.95 release.  You can convert your existing CVS tree
+       to track the GCC 2.95 release with the command:
        <br><tt>cvs update -rgcc-2_95-branch</tt>
-  <li> Track both the gcc-2.95 release and the development sources.  You will
-       need to check out the gcc-2.95 release in a separate directory using the
+  <li> Track both the GCC 2.95 release and the development sources.  You will
+       need to check out the GCC 2.95 release in a separate directory using the
        command:
        <br><tt>cvs co -rgcc-2_95-branch egcs</tt>
 </ol>
 
-<p>Considering that the primary focus of the project is on the gcc-2.95 release,
+<p>Considering that the primary focus of the project is on the GCC 2.95 release,
 option #2 or #3 is recommended.
 
-<p>FTP snapshots will track the gcc-2.95 release only.  After gcc-2.95 is
+<p>FTP snapshots will track the GCC 2.95 release only.  After GCC 2.95 is
 released, snapshots will return to tracking the mainline sources.
 
 <hr>
-<p>All patches for the gcc-2.95 release branch must be approved by the
+<p>All patches for the GCC 2.95 release branch must be approved by the
 release coordinator (Jeff Law).
 
-<p>We are only accepting bugfix patches for the gcc-2.95 release.
+<p>We are only accepting bugfix patches for the GCC 2.95 release.
 
 <p>You can still submit patches for the mainline gcc sources.  However,
-responses to such patches may be delayed due to the focus on the gcc-2.95
+responses to such patches may be delayed due to the focus on the GCC 2.95
 release.
 
 
 <hr>
 <p><a href="../index.html">Return to the egcs home page</a>
-<p><i>Last modified:  July 9, 1999</i>
+<p><i>Last modified:  July 28, 1999</i>
 
 </body>
 </html>
