--- a/htdocs/gcc-2.95/caveats.html
+++ b/htdocs/gcc-2.95/caveats.html
@@ -1,63 +1,63 @@
 <html>
 <head>
-<title>gcc-2.95 Caveats</title>
+<title>GCC 2.95 Caveats</title>
 </head>
 <body>
-<h1 align="center">gcc-2.95 Caveats</h1>
+<h1 align="center">GCC 2.95 Caveats</h1>
 
 <ul>
-  <li>gcc-2.95 will issue an error for invalid asm statements that had been
+  <li>GCC 2.95 will issue an error for invalid asm statements that had been
   silently accepted by earlier versions of the compiler.  This is particularly
   noticable when compiling older versions of the Linux kernel (2.0.xx).
   Please refer to the <a href="../faq.html#asmclobber">FAQ</a> for more
   information on this issue.
    
-  <li>gcc-2.95 implements type based alias analysis to disambiguate memory
+  <li>GCC 2.95 implements type based alias analysis to disambiguate memory
   references.  Some programs, particularly the Linux kernel violate ANSI/ISO
   aliasing rules and therefore may not operate correctly when compiled with
-  gcc-2.95.  
+  GCC 2.95.  
 
   Please refer to the <a href="../faq.html#linuxkernel">FAQ</a> for more
   information on this issue.
 
-  <li>gcc-2.95 has a known bug in its handling of complex variables for
-  64bit targets.  Instead of silently generating incorrect code, gcc-2.95
+  <li>GCC 2.95 has a known bug in its handling of complex variables for
+  64bit targets.  Instead of silently generating incorrect code, GCC 2.95
   will issue a fatal error for situations it can not handle.
 
   This primarily affects the Fortran community as Fortran makes more use of
   complex variables than C or C++.
 
-  <li>gcc-2.95 has an integrated libstdc++, but does not have an integrated
-  libg++.  Furthermore old libg++ releases will not work with gcc-2.95.  You can
+  <li>GCC 2.95 has an integrated libstdc++, but does not have an integrated
+  libg++.  Furthermore old libg++ releases will not work with GCC 2.95.  You can
   retrieve a recent copy of libg++ from the
   <a href="ftp://egcs.cygnus.com/pub/egcs/infrastructure/libg++-2.8.1.3.tar.gz">  egcs ftp server</a>.
   <br>Note most C++ programs only need libstdc++.
 
   <li> Exception handling may not work with shared libraries, particularly
   on alphas, hppas, rs6000/powerpc and mips based platforms.  Exception
-  handling is known to work on x86-linux platforms with shared libraries.
+  handling is known to work on x86 GNU/Linux platforms with shared libraries.
 
-  <li> In general, gcc-2.95 is more rigorous about rejecting invalid C++ code
+  <li> In general, GCC 2.95 is more rigorous about rejecting invalid C++ code
   or deprecated C++ constructs than g++-2.7, g++-2.8, egcs-1.0, or egcs-1.1.
   As a result it may be necessary to fix C++ code before it will compile with
-  gcc-2.95.
+  GCC 2.95.
 
   <li>G++ is also converting toward the ISO C++ standard; as a result code
   which was previously valid (and thus accepted by other compilers and older
   versions of g++) may no longer be accepted.  The flag -fpermissive may
-  allow some non-conforming code to compile with gcc-2.95.
+  allow some non-conforming code to compile with GCC 2.95.
 
-  <li>gcc-2.95 compiled C++ code is not binary compatible with egcs-1.1,
+  <li>GCC 2.95 compiled C++ code is not binary compatible with egcs-1.1,
   egcs-1.0.x or gcc-2.8.x.
 
-  <li>gcc-2.95 does not have changes from the gcc-2.8 tree that were made
+  <li>GCC 2.95 does not have changes from the gcc-2.8 tree that were made
   between Sept 30, 1998 and April 30, 1999 (the official end of the gcc-2.8
   project).   Future GCC releases will include all the changes from the
   defunct gcc-2.8 project.
 </ul>
 
 <p><a href="../index.html">Return to the egcs home page</a>
-<p><i>Last modified:  July 25, 1999</i>
+<p><i>Last modified:  July 28, 1999</i>
 
 </body>
 </html>
