--- a/htdocs/gcc-2.95/gcc-2.95.html
+++ b/htdocs/gcc-2.95/gcc-2.95.html
@@ -1,18 +1,20 @@
 <html>
 <head>
-<title>gcc-2.95</title>
+<title>GCC 2.95</title>
 </head>
 <body>
-<h1 align="center">gcc-2.95</h1>
+<h1 align="center">GCC-2.95</h1>
 
 <h2> XXX This is a template only.  It will change.</h2>
 <p>July XX, 1999
 
-<p>The GCC project is pleased to announce the release of gcc-2.95.
+<p>The GNU project and the GCC/EGCS developers are pleased to announce the
+release of GCC version 2.95.  GCC used to stand for the GNU C Compiler, but
+since the compiler supports several other languages aside from C, it now stands
+for the GNU Compiler Collection.
 
-<p>This is the first release of the GNU Compiler Collection (GCC) since the
-April 1999 GCC/EGCS reunification and includes nearly a year's worth of
-new development and bugfixes.
+<p>This is the first release of GCC since the April 1999 GCC/EGCS reunification
+and includes nearly a year's worth of new development and bugfixes.
 
 <p>The whole suite has been extensively 
 <a href="regress.html">regression tested</a>
@@ -22,7 +24,7 @@ and suitable for widespread use.
 <p>The compiler has several new optimizations, new targets, new languages
 and other new features.  See the
 <a href="features.html">new features</a> page for a more complete
-list of new features found in the gcc-2.95 releases.
+list of new features found in the GCC 2.95 releases.
 
 <p>The sources include installation instructions in both HTML
 and plaintext forms in the <code>install</code> directory in the distribution.
@@ -32,26 +34,27 @@ and <a href="buildstat.html">build/test status</a> are on the web pages.  We
 will update those pages as new information becomes available.
 
 
-<p> The GCC project would like to thank the numerous people that have
-contributed new features, test results, bugfixes, etc.  This 
-<a href="../thanks.html">amazing group of volunteers</a> is what makes
-GCC successful.
+<p> The GCC developers developers would like to thank the numerous people that
+have contributed new features, test results, bugfixes, etc to GCC.  This
+<a href="../thanks.html">amazing group of volunteers</a> is what makes GCC 
+successful.
 
 <p>And finally, we can't in good conscience fail to mention some
-<a href="caveats.html">caveats</a> to using gcc-2.95.
+<a href="caveats.html">caveats</a> to using GCC 2.95.
 
-<p><a href="http://www.gnu.org/order/ftp.html">
-FTP Download gcc-2.95 from one of the gnu.org mirror sites</a>
-<p><a href="ftp://go.cygnus.com/pub/sourceware.cygnus.com/pub/egcs/releases/index.html">
-FTP Download gcc-2.95 from go.cygnus.com (USA California)</a>
-<a href="../mirrors.html"> Goto mirror list to find a closer site</a>
+<p> Download GCC 2.95 from the
+<a href="ftp://ftp.gnu.org/pub/gnu/gcc/">GNU FTP server (ftp://ftp.gnu.org</a>
+<br>Download GCC 2.95 from the
+<a href="ftp://go.cygnus.com/pub/sourceware.cygnus.com/pub/egcs/releases/index.html">GCC/EGCS FTP server (ftp://go.cygnus.com)</a>
+<br><a href="http://www.gnu.org/order/ftp.html">Find a GNU mirror site</a>
+<br><a href="../mirrors.html">Find a GCC/EGCS mirror site</a>
 
-<p>For additional information about the GCC project please see the
+<p>For additional information about GCC please see the
 <a href="../index.html">GCC project web server</a> or contact the
 <a href="mailto:gcc@gcc.gnu.org">GCC development mailing list</a>.
 
 <hr>
-<i>Last modified on July 27, 1999.</i>
+<i>Last modified on July 28, 1999.</i>
 
 </body>
 </html>
