--- a/htdocs/gcc-2.95/regress.html
+++ b/htdocs/gcc-2.95/regress.html
@@ -1,16 +1,16 @@
 <html>
 <head>
-<title>gcc-2.95 regression test strategy</title>
+<title>GCC 2.95 regression test strategy</title>
 </head>
 <body>
-<h1 align="center">gcc-2.95 regression test strategy</h1>
+<h1 align="center">GCC 2.95 regression test strategy</h1>
 
 <h2> Regression Testing </h2>
 <p>One of the critical steps in making releases is regression testing.  For
-gcc-2.95 regression tests have been performed against egcs-1.1.2.
+GCC 2.95 regression tests have been performed against egcs-1.1.2.
 
 <p>Since it is impossible to test every platform, several popular platforms
-were selected for regression testing.  The goal is for gcc-2.95 to have zero
+were selected for regression testing.  The goal is for GCC 2.95 to have zero
 regressions relative to egcs-1.1.2 for gcc, g++, g77, objc, libstdc++, 
 libio, and libg++.
 
@@ -469,7 +469,7 @@ with -fno-strict-aliasing as the linux kernel violates ANSI/ISO C standards
 used to perform type based alias analysis.
 
 <p> In addition to performing regression testing we want to test major
-software packages with gcc-2.95.  This list is not complete (I would like
+software packages with GCC 2.95.  This list is not complete (I would like
 to add at least one major C++ and Fortran package).
 
 <ul>
@@ -477,7 +477,7 @@ to add at least one major C++ and Fortran package).
   <li> Fortran package(s)
 </ul>
 
-<p><i>Last modified on July 13, 1999.</i>
+<p><i>Last modified on July 28, 1999.</i>
 
 </body>
 </html>
