--- a/htdocs/gcc-2.95/schedule.html
+++ b/htdocs/gcc-2.95/schedule.html
@@ -1,20 +1,20 @@
 <html>
 <head>
-<title>gcc-2.95</title>
+<title>GCC 2.95</title>
 </head>
 <body>
-<h1 align="center">gcc-2.95</h1>
+<h1 align="center">GCC 2.95</h1>
 
 <p> It was recently announced that the egcs project would be taking over
 maintenance of GCC.  To help reinforce this change in maintainership and
 take one of the (many) steps needed to be the GCC maintainers the next
-major release from the egcs project will be gcc-2.95 (instead of egcs-1.2).
+major release from the egcs project will be GCC 2.95 (instead of egcs-1.2).
 
-<p> After gcc-2.95 is branched/released the remaining changes from the old FSF
+<p> After GCC 2.95 is branched/released the remaining changes from the old FSF
 gcc2 tree will be merged into the egcs development tree and the old FSF gcc2
 tree will be considered officially dead.  That way none of the work on the
 old FSF gcc2 tree will be lost.  We chose not to merge in that code now 
-because it would have introduced a significant delay in the gcc-2.95 release.
+because it would have introduced a significant delay in the GCC 2.95 release.
 
 <p> We will start the gcc-3.0 release cycle once the remaining pieces of the new
 C++ ABI and the libstdc++ rewrite are complete.  I also hope that we will have
@@ -22,15 +22,15 @@ an integrated Ada and/or Pascal compilers by then.
 
 
 <p>This page is meant to provide information about the current schedule
-for gcc-2.95, the <a href="regress.html">testing/release criteria</a>
-for gcc-2.95, <a href="features.html">new features</a> to be found in
-gcc-2.95, etc.
+for GCC 2.95, the <a href="regress.html">testing/release criteria</a>
+for GCC 2.95, <a href="features.html">new features</a> to be found in
+GCC 2.95, etc.
 
-<p> We are still wrapping up some issues for the gcc-2.95 release.  We have
+<p> We are still wrapping up some issues for the GCC 2.95 release.  We have
 fallen somewhat behind the original schedule due to various reasons.  Hopefully
 we will not have to slip the schedule further.
 
-<p>The updated tentative schedule for the gcc-2.95 release is:
+<p>The updated tentative schedule for the GCC 2.95 release is:
 
 <ul>
   <li> <b>April 21, 1999. Feature freeze date</b>.
@@ -43,25 +43,25 @@ we will not have to slip the schedule further.
   as quickly as possible after the feature freeze date.
 
   <p> After April 21, 1999, only bugfix submissions will be considered for
-  the gcc-2.95 release.
+  the GCC 2.95 release.
 
   <p> By April 21, 1999, we also want to have a testing plan and release
   criteria in place.
 
   <p><li> <b>May 17, 1999. Branch Creation & Testing</b>.
-  <p> The gcc-2.95 branch was created on May 17, 1999 and snapshots will
-  occur from the gcc-2.95 branch instead of the mainline sources.  The
-  <a href="branch.html">gcc-2.95 branch page</a> has information about
-  how to check out the gcc-2.95 branch.
+  <p> The GCC 2.95 branch was created on May 17, 1999 and snapshots will
+  occur from the GCC 2.95 branch instead of the mainline sources.  The
+  <a href="branch.html">GCC 2.95 branch page</a> has information about
+  how to check out the GCC 2.95 branch.
 
   <p> By May 17, 1999 it is hoped that all new features, optimizations, etc
-  slated for the gcc-2.95 release have been installed into the source tree.
+  slated for the GCC 2.95 release have been installed into the source tree.
 
   <p> Wide scale, release focused testing should start on or before May 17.
 
   <p> <li> <b>June 22, 1999. Critical Bug Freeze Date</b>.
   <p>June 2, 1999 is updated the target date for freezing the sources.  After
-  this date only critical bugfixes will be accepted for inclusion in gcc-2.95
+  this date only critical bugfixes will be accepted for inclusion in GCC 2.95
   (original critical bugfreeze date was June 15, 1999).
 
   <p> <li> <b>July 8, 1999. Tenative Release date</b>.
@@ -79,7 +79,7 @@ will hopefully start to appear soon as well as updated on the issues mentioned
 in the list above.
  
 <hr>
-<i>Last modified on June 22, 1999.</i>
+<i>Last modified on June 28, 1999.</i>
 
 </body>
 </html>
