--- a/htdocs/gcc-2.95/buildstat.html
+++ b/htdocs/gcc-2.95/buildstat.html
@@ -1,13 +1,13 @@
 <html>
 <head>
-<title> Build status for gcc-2.95</title>
+<title> Build status for GCC 2.95</title>
 </head>
 <body>
-<h1 align="center">Build status for gcc-2.95</h1>
+<h1 align="center">Build status for GCC 2.95</h1>
 
 <hr>
 <p>
-<i>Last modified on July 15, 1999.</i>
+<i>Last modified on July 28, 1999.</i>
 
 </body>
 </html>
