--- a/htdocs/gcc-2.95/features.html
+++ b/htdocs/gcc-2.95/features.html
@@ -1,9 +1,9 @@
 <html>
 <head>
-<title>gcc-2.95 New Features</title>
+<title>GCC 2.95 New Features</title>
 </head>
 <body>
-<h1 align="center">gcc-2.95 new features</h1>
+<h1 align="center">GCC 2.95 new features</h1>
 
 <ul>
   <li> General Optimizer Improvements:
@@ -77,11 +77,11 @@
   <li>Plus the usual mountain of bugfixes
   <li>Core compiler is based on the gcc2 development tree from Sept 30, 1998,
   so we have all of the <a href="../egcs-1.0/features-2.8.html">features
-  found in gcc-2.8</a>.
+  found in GCC 2.8</a>.
 </ul>
 
 <p><a href="../index.html">Return to the egcs home page</a>
-<p><i>Last modified:  July 13, 1999</i>
+<p><i>Last modified:  July 28, 1999</i>
 
 </body>
 </html>
