More minor tweaks based on RMS comments.

--- a/htdocs/gcc-2.95/regress.html
+++ b/htdocs/gcc-2.95/regress.html
@@ -7,11 +7,11 @@
 
 <h2> Regression Testing </h2>
 <p>One of the critical steps in making releases is regression testing.  For
-GCC 2.95 regression tests have been performed against egcs-1.1.2.
+GCC 2.95 regression tests have been performed against EGCS 1.1.2.
 
 <p>Since it is impossible to test every platform, several popular platforms
 were selected for regression testing.  The goal is for GCC 2.95 to have zero
-regressions relative to egcs-1.1.2 for gcc, g++, g77, objc, libstdc++, 
+regressions relative to EGCS 1.1.2 for gcc, g++, g77, objc, libstdc++, 
 libio, and libg++.
 
 
