--- a/htdocs/gcc-2.95/schedule.html
+++ b/htdocs/gcc-2.95/schedule.html
@@ -8,7 +8,7 @@
 <p> It was recently announced that the egcs project would be taking over
 maintenance of GCC.  To help reinforce this change in maintainership and
 take one of the (many) steps needed to be the GCC maintainers the next
-major release from the egcs project will be GCC 2.95 (instead of egcs-1.2).
+major release from the egcs project will be GCC 2.95 (instead of EGCS 1.2).
 
 <p> After GCC 2.95 is branched/released the remaining changes from the old FSF
 gcc2 tree will be merged into the egcs development tree and the old FSF gcc2
@@ -16,7 +16,7 @@ tree will be considered officially dead.  That way none of the work on the
 old FSF gcc2 tree will be lost.  We chose not to merge in that code now 
 because it would have introduced a significant delay in the GCC 2.95 release.
 
-<p> We will start the gcc-3.0 release cycle once the remaining pieces of the new
+<p> We will start the GCC 3.0 release cycle once the remaining pieces of the new
 C++ ABI and the libstdc++ rewrite are complete.  I also hope that we will have
 an integrated Ada and/or Pascal compilers by then.
 
@@ -36,7 +36,7 @@ we will not have to slip the schedule further.
   <li> <b>April 21, 1999. Feature freeze date</b>.
   <p>All new features, optimizations, etc need to be <i>submitted</i> by
   this date.  It is likely that not all submissions will be accepted
-  for egcs-1.2.  But all submissions need to be made available for evaluation
+  for EGCS 1.2.  But all submissions need to be made available for evaluation
   by April 21, 1999.
 
   <p> We will try to get all accepted patches installed into the code base
