--- a/htdocs/gcc-2.95/caveats.html
+++ b/htdocs/gcc-2.95/caveats.html
@@ -38,7 +38,7 @@
   handling is known to work on x86 GNU/Linux platforms with shared libraries.
 
   <li> In general, GCC 2.95 is more rigorous about rejecting invalid C++ code
-  or deprecated C++ constructs than g++-2.7, g++-2.8, egcs-1.0, or egcs-1.1.
+  or deprecated C++ constructs than G++ 2.7, G++ 2.8, EGCS 1.0, or EGCS 1.1.
   As a result it may be necessary to fix C++ code before it will compile with
   GCC 2.95.
 
@@ -47,13 +47,13 @@
   versions of g++) may no longer be accepted.  The flag -fpermissive may
   allow some non-conforming code to compile with GCC 2.95.
 
-  <li>GCC 2.95 compiled C++ code is not binary compatible with egcs-1.1,
-  egcs-1.0.x or gcc-2.8.x.
+  <li>GCC 2.95 compiled C++ code is not binary compatible with EGCS 1.1,
+  EGCS 1.0.x or GCC 2.8.x.
 
-  <li>GCC 2.95 does not have changes from the gcc-2.8 tree that were made
-  between Sept 30, 1998 and April 30, 1999 (the official end of the gcc-2.8
+  <li>GCC 2.95 does not have changes from the GCC 2.8 tree that were made
+  between Sept 30, 1998 and April 30, 1999 (the official end of the GCC 2.8
   project).   Future GCC releases will include all the changes from the
-  defunct gcc-2.8 project.
+  defunct GCC 2.8 project.
 </ul>
 
 <p><a href="../index.html">Return to the egcs home page</a>
