More RMS inspired changes.

--- a/htdocs/gcc-2.95/branch.html
+++ b/htdocs/gcc-2.95/branch.html
@@ -19,8 +19,8 @@ situation you have three choices for handling your CVS tree.
        <br><tt>cvs co -rgcc-2_95-branch egcs</tt>
 </ol>
 
-<p>Considering that the primary focus of the project is on the GCC 2.95 release,
-option #2 or #3 is recommended.
+<p>Considering that the primary focus of the developers is on the GCC 2.95
+release, option #2 or #3 is recommended.
 
 <p>FTP snapshots will track the GCC 2.95 release only.  After GCC 2.95 is
 released, snapshots will return to tracking the mainline sources.
