--- a/htdocs/gcc-2.95/caveats.html
+++ b/htdocs/gcc-2.95/caveats.html
@@ -53,7 +53,7 @@
   <li>GCC 2.95 does not have changes from the GCC 2.8 tree that were made
   between Sept 30, 1998 and April 30, 1999 (the official end of the GCC 2.8
   project).   Future GCC releases will include all the changes from the
-  defunct GCC 2.8 project.
+  defunct GCC 2.8 sources.
 </ul>
 
 <p><a href="../index.html">Return to the egcs home page</a>
