--- a/htdocs/gcc-2.95/schedule.html
+++ b/htdocs/gcc-2.95/schedule.html
@@ -5,13 +5,13 @@
 <body>
 <h1 align="center">GCC 2.95</h1>
 
-<p> It was recently announced that the egcs project would be taking over
+<p> It was recently announced that the EGCS project would be taking over
 maintenance of GCC.  To help reinforce this change in maintainership and
 take one of the (many) steps needed to be the GCC maintainers the next
-major release from the egcs project will be GCC 2.95 (instead of EGCS 1.2).
+major release from the EGCS project will be GCC 2.95 (instead of EGCS 1.2).
 
 <p> After GCC 2.95 is branched/released the remaining changes from the old FSF
-gcc2 tree will be merged into the egcs development tree and the old FSF gcc2
+gcc2 tree will be merged into the EGCS development tree and the old FSF gcc2
 tree will be considered officially dead.  That way none of the work on the
 old FSF gcc2 tree will be lost.  We chose not to merge in that code now 
 because it would have introduced a significant delay in the GCC 2.95 release.
